Create basic layout with content,add icons

--- a/weather_forecast.html
+++ b/weather_forecast.html
@@ -7,9 +7,64 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="weather_forecast.css">
-    <link rel="stylesheet" href="assets/icon/weather-icons.css">
+    <link rel="stylesheet" href="assets/font/weather-icons.css">
 </head>
 <body>
-<main></main>
+<main class="container">
+    <div class="container__wrapper">
+        <h1 class="container__title">CSS Weather Forecast <i class="wi wi-sunrise"></i></h1>
+        <section class="weather">
+            <ul class="weather-cell">
+                <li class="weather__cell-item weather__cell-item-50">
+                    <p>Lisbon</p>
+                    <span>21°C <i class="wi wi-day-sunny"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Paris</p>
+                    <span>11°C <i class="wi wi-night-rain-mix"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Belgrade</p>
+                    <span>15°C <i class="wi wi-day-sunny-overcast"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Moscow</p>
+                    <span>21°C <i class="wi wi-day-cloudy-high"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Tel Aviv</p>
+                    <span>32°C <i class="wi wi-hot"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Cair</p>
+                    <span>21°C <i class="wi wi-day-sunny"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>New York</p>
+                    <span>17°C <i class="wi wi-day-storm-showers"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <P>New Delhi</P>
+                    <span>17°C <i class="wi wi-rain-wind"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-50">
+                    <p>San Francisco</p>
+                    <span>15°C <i class="wi wi-day-cloudy"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-25">
+                    <p>Tokyo</p>
+                    <span>8°C <i class="wi wi-night-clear"></i></span>
+                </li>
+                <li class="weather__cell-item weather__cell-item-100">
+                    <p>Sydney</p>
+                    <span>25°C <i class="wi wi-night-partly-cloudy"></i></span>
+                </li>
+            </ul>
+        </section>
+        <div class="container__bottom-text">
+            Have a nice day and don't forget if you are in New Delhi now!
+        </div>
+    </div>
+</main>
 </body>
 </html>
