--- a/weather_forecast.html
+++ b/weather_forecast.html
@@ -15,47 +15,47 @@
         <h1 class="container__title">CSS Weather Forecast <i class="wi wi-sunrise"></i></h1>
         <section class="weather">
             <ul class="weather-cell">
-                <li class="weather__cell-item weather__cell-item-50">
+                <li class="weather__cell-item weather__cell-item_50 weather__cell-item_dark-blue">
                     <p>Lisbon</p>
-                    <span>21°C <i class="wi wi-day-sunny"></i></span>
+                    21°C <i class="wi wi-day-sunny"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_blue">
                     <p>Paris</p>
-                    <span>11°C <i class="wi wi-night-rain-mix"></i></span>
+                    11°C <i class="wi wi-night-rain-mix"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_strikemaster">
                     <p>Belgrade</p>
-                    <span>15°C <i class="wi wi-day-sunny-overcast"></i></span>
+                    15°C <i class="wi wi-day-sunny-overcast"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_red">
                     <p>Moscow</p>
-                    <span>21°C <i class="wi wi-day-cloudy-high"></i></span>
+                    21°C <i class="wi wi-day-cloudy-high"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_orange">
                     <p>Tel Aviv</p>
-                    <span>32°C <i class="wi wi-hot"></i></span>
+                    32°C <i class="wi wi-hot"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_yellow">
                     <p>Cair</p>
-                    <span>21°C <i class="wi wi-day-sunny"></i></span>
+                    21°C <i class="wi wi-day-sunny"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_green ">
                     <p>New York</p>
-                    <span>17°C <i class="wi wi-day-storm-showers"></i></span>
+                    17°C <i class="wi wi-day-storm-showers"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_patina">
                     <P>New Delhi</P>
-                    <span>17°C <i class="wi wi-rain-wind"></i></span>
+                    17°C <i class="wi wi-rain-wind"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-50">
+                <li class="weather__cell-item weather__cell-item_50 weather__cell-item_pink">
                     <p>San Francisco</p>
-                    <span>15°C <i class="wi wi-day-cloudy"></i></span>
+                    15°C <i class="wi wi-day-cloudy"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-25">
+                <li class="weather__cell-item weather__cell-item_25 weather__cell-item_dark-green">
                     <p>Tokyo</p>
-                    <span>8°C <i class="wi wi-night-clear"></i></span>
+                    8°C <i class="wi wi-night-clear"></i>
                 </li>
-                <li class="weather__cell-item weather__cell-item-100">
+                <li class="weather__cell-item weather__cell-item_100 weather__cell-item_kimberly">
                     <p>Sydney</p>
                     <span>25°C <i class="wi wi-night-partly-cloudy"></i></span>
                 </li>
